; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/cavium/extr_octopci_bus_space.c_octopci_bs_sr_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/cavium/extr_octopci_bus_space.c_octopci_bs_sr_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @octopci_bs_sr_1(i8* %0, i64 %1, i64 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = add nsw i64 %12, %13
  store i64 %14, i64* %11, align 8
  br label %15

15:                                               ; preds = %22, %5
  %16 = load i64, i64* %10, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %15
  %19 = load i64, i64* %11, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @wr8(i64 %19, i32 %20)
  br label %22

22:                                               ; preds = %18
  %23 = load i64, i64* %10, align 8
  %24 = add i64 %23, -1
  store i64 %24, i64* %10, align 8
  %25 = load i64, i64* %11, align 8
  %26 = add nsw i64 %25, 1
  store i64 %26, i64* %11, align 8
  br label %15

27:                                               ; preds = %15
  ret void
}

declare dso_local i32 @wr8(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
